--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,129 +6,62 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>706</width>
-    <height>627</height>
+    <width>516</width>
+    <height>396</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QGridLayout" name="gridLayout_2">
-    <item row="1" column="0">
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="7" column="3">
-       <layout class="QHBoxLayout" name="horizontalLayout"/>
-      </item>
-      <item row="1" column="3">
-       <widget class="QTabWidget" name="tabWidget">
-        <property name="currentIndex">
-         <number>1</number>
-        </property>
-        <widget class="QWidget" name="tab">
-         <attribute name="title">
-          <string>Tab 1</string>
-         </attribute>
-         <widget class="CanvasModel" name="tempCanvas">
-          <property name="geometry">
-           <rect>
-            <x>20</x>
-            <y>120</y>
-            <width>256</width>
-            <height>192</height>
-           </rect>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">background-color: rgb(108, 123, 255);</string>
-          </property>
-         </widget>
-        </widget>
-        <widget class="QWidget" name="tab_2">
-         <attribute name="title">
-          <string>Tab 2</string>
-         </attribute>
-        </widget>
-       </widget>
-      </item>
-      <item row="1" column="4">
+   <layout class="QVBoxLayout" name="verticalLayout_2">
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
        <layout class="QVBoxLayout" name="verticalLayout_8">
         <item>
-         <widget class="QGraphicsView" name="graphicsView"/>
-        </item>
-        <item>
-         <widget class="QSlider" name="horizontalSlider">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QGraphicsView" name="graphicsView_2">
+         <widget class="QWidgetToolbar" name="widget" native="true">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item row="1" column="1">
-       <layout class="QVBoxLayout" name="verticalLayout">
-        <item>
-         <widget class="QPushButton" name="paintBrushButton">
-          <property name="text">
-           <string/>
+          <property name="minimumSize">
+           <size>
+            <width>66</width>
+            <height>56</height>
+           </size>
           </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="broadBrushButton">
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="eraserButton">
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="dropperButton">
-          <property name="text">
-           <string/>
+          <property name="maximumSize">
+           <size>
+            <width>66</width>
+            <height>16777215</height>
+           </size>
           </property>
          </widget>
         </item>
        </layout>
       </item>
-      <item row="2" column="1">
-       <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_4">
         <item>
-         <widget class="clickedColorResponse" name="primaryColorWidget">
-          <property name="styleSheet">
-           <string notr="true">background-color: rgb(17, 16, 47);</string>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
           </property>
-         </widget>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </item>
-      <item row="2" column="3">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout"/>
       </item>
      </layout>
     </item>
@@ -139,8 +72,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>706</width>
-     <height>22</height>
+     <width>516</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
@@ -157,14 +90,10 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>clickedColorResponse</class>
-   <extends>QGraphicsView</extends>
-   <header>clickedcolorresponse.h</header>
-  </customwidget>
-  <customwidget>
-   <class>CanvasModel</class>
-   <extends>QGraphicsView</extends>
-   <header>canvasmodel.h</header>
+   <class>QWidgetToolbar</class>
+   <extends>QWidget</extends>
+   <header>qwidgettoolbar.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
