--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>734</width>
-    <height>544</height>
+    <width>1034</width>
+    <height>606</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -67,13 +67,19 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>618</width>
-             <height>618</height>
+             <width>624</width>
+             <height>624</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout">
             <item row="0" column="0">
              <widget class="QWidgetCanvas" name="Canvas" native="true">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="minimumSize">
                <size>
                 <width>600</width>
@@ -91,6 +97,9 @@
                 <width>15</width>
                 <height>15</height>
                </size>
+              </property>
+              <property name="mouseTracking">
+               <bool>false</bool>
               </property>
               <property name="autoFillBackground">
                <bool>true</bool>
@@ -121,12 +130,22 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QPushButton" name="addCanvasButton">
+          <property name="text">
+           <string>Add Canvas</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QScrollArea" name="scrollArea_2">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="minimumSize">
        <size>
         <width>4</width>
@@ -143,35 +162,34 @@
        <bool>true</bool>
       </property>
       <widget class="QWidget" name="scrollAreaWidgetContents_2">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="geometry">
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>714</width>
+         <width>1008</width>
          <height>126</height>
         </rect>
        </property>
-       <widget class="QWidget" name="AnimationFrame" native="true">
+       <widget class="QWidget" name="horizontalLayoutWidget">
         <property name="geometry">
          <rect>
-          <x>-10</x>
-          <y>0</y>
-          <width>498</width>
-          <height>50</height>
+          <x>10</x>
+          <y>10</y>
+          <width>991</width>
+          <height>111</height>
          </rect>
         </property>
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>50</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>128</height>
-         </size>
-        </property>
+        <layout class="QHBoxLayout" name="scrollArea_2Layout">
+         <property name="spacing">
+          <number>-1</number>
+         </property>
+         <property name="sizeConstraint">
+          <enum>QLayout::SetDefaultConstraint</enum>
+         </property>
+        </layout>
        </widget>
       </widget>
      </widget>
@@ -183,8 +201,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>734</width>
-     <height>21</height>
+     <width>1034</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
