--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -140,9 +140,34 @@
          </widget>
         </item>
         <item>
+         <widget class="QLabel" name="sliderValueLabel">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QSlider" name="fpsSpeedSlider">
+          <property name="minimum">
+           <number>15</number>
+          </property>
+          <property name="maximum">
+           <number>100</number>
+          </property>
+          <property name="value">
+           <number>15</number>
+          </property>
+          <property name="sliderPosition">
+           <number>15</number>
+          </property>
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="invertedAppearance">
+           <bool>false</bool>
+          </property>
+          <property name="invertedControls">
+           <bool>false</bool>
           </property>
          </widget>
         </item>
