Load tool finished (90%), scroll view finished

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -110,6 +110,7 @@
               <property name="autoFillBackground">
                <bool>true</bool>
               </property>
+              <zorder>pushButton</zorder>
              </widget>
             </item>
            </layout>
