--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1005,7 +1005,7 @@ border-radius: 4px;
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
-       <layout class="QVBoxLayout" name="Left_horzLayout">
+       <layout class="QVBoxLayout" name="Left_horzLayout" stretch="0">
         <item>
          <widget class="QWidgetToolbar" name="Toolbar" native="true">
           <property name="sizePolicy">
@@ -1036,8 +1036,8 @@ border-radius: 4px;
          <widget class="QScrollArea" name="scrollArea">
           <property name="minimumSize">
            <size>
-            <width>300</width>
-            <height>300</height>
+            <width>0</width>
+            <height>0</height>
            </size>
           </property>
           <property name="verticalScrollBarPolicy">
@@ -1053,9 +1053,9 @@ border-radius: 4px;
            <property name="geometry">
             <rect>
              <x>0</x>
-             <y>0</y>
-             <width>624</width>
-             <height>624</height>
+             <y>-2</y>
+             <width>618</width>
+             <height>618</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout">
@@ -1081,8 +1081,8 @@ border-radius: 4px;
               </property>
               <property name="sizeIncrement">
                <size>
-                <width>15</width>
-                <height>15</height>
+                <width>0</width>
+                <height>0</height>
                </size>
               </property>
               <property name="mouseTracking">
@@ -1100,72 +1100,212 @@ border-radius: 4px;
        </layout>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="Right_horzLayout">
-        <item>
-         <widget class="QWidgetPreview" name="Preview" native="true">
-          <property name="minimumSize">
-           <size>
-            <width>300</width>
-            <height>200</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>300</width>
-            <height>200</height>
-           </size>
-          </property>
-          <property name="mouseTracking">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="sliderValueLabel">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>FPS: 1</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QSlider" name="fpsSpeedSlider">
-          <property name="minimum">
-           <number>1</number>
-          </property>
-          <property name="maximum">
-           <number>100</number>
-          </property>
-          <property name="value">
-           <number>1</number>
-          </property>
-          <property name="sliderPosition">
-           <number>1</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="invertedAppearance">
-           <bool>false</bool>
-          </property>
-          <property name="invertedControls">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="addCanvasButton">
-          <property name="text">
-           <string>Add Canvas</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <widget class="QWidgetExpandableScroller" name="ExpandableScroller_1" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>12</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QWidget" name="Right_horzLayout_2" native="true">
+        <property name="maximumSize">
+         <size>
+          <width>313</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <layout class="QVBoxLayout" name="Right_horzLayout" stretch="0,0">
+         <property name="sizeConstraint">
+          <enum>QLayout::SetMinimumSize</enum>
+         </property>
+         <item>
+          <widget class="QScrollArea" name="scrollArea_2">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>300</width>
+             <height>300</height>
+            </size>
+           </property>
+           <property name="sizeIncrement">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+           <property name="verticalScrollBarPolicy">
+            <enum>Qt::ScrollBarAlwaysOn</enum>
+           </property>
+           <property name="horizontalScrollBarPolicy">
+            <enum>Qt::ScrollBarAlwaysOn</enum>
+           </property>
+           <property name="widgetResizable">
+            <bool>true</bool>
+           </property>
+           <widget class="QWidget" name="scrollAreaWidgetContents_2">
+            <property name="geometry">
+             <rect>
+              <x>-20</x>
+              <y>0</y>
+              <width>618</width>
+              <height>618</height>
+             </rect>
+            </property>
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_2">
+             <item row="0" column="0">
+              <widget class="QWidgetPreview" name="Preview" native="true">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="minimumSize">
+                <size>
+                 <width>300</width>
+                 <height>300</height>
+                </size>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>300</width>
+                 <height>300</height>
+                </size>
+               </property>
+               <property name="sizeIncrement">
+                <size>
+                 <width>16</width>
+                 <height>16</height>
+                </size>
+               </property>
+               <property name="mouseTracking">
+                <bool>false</bool>
+               </property>
+               <property name="autoFillBackground">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </widget>
+         </item>
+         <item>
+          <widget class="QWidget" name="widget" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>128</width>
+             <height>128</height>
+            </size>
+           </property>
+           <widget class="QPushButton" name="addCanvasButton">
+            <property name="geometry">
+             <rect>
+              <x>16</x>
+              <y>20</y>
+              <width>96</width>
+              <height>27</height>
+             </rect>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>100</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Add Canvas</string>
+            </property>
+           </widget>
+           <widget class="QSlider" name="fpsSpeedSlider">
+            <property name="geometry">
+             <rect>
+              <x>16</x>
+              <y>0</y>
+              <width>96</width>
+              <height>15</height>
+             </rect>
+            </property>
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>313</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="value">
+             <number>1</number>
+            </property>
+            <property name="sliderPosition">
+             <number>1</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="invertedAppearance">
+             <bool>false</bool>
+            </property>
+            <property name="invertedControls">
+             <bool>false</bool>
+            </property>
+           </widget>
+           <widget class="QLabel" name="sliderValueLabel">
+            <property name="geometry">
+             <rect>
+              <x>16</x>
+              <y>50</y>
+              <width>96</width>
+              <height>32</height>
+             </rect>
+            </property>
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>FPS: 1</string>
+            </property>
+           </widget>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item>
+       <widget class="QWidget" name="widget_2" native="true"/>
       </item>
      </layout>
     </item>
@@ -1187,7 +1327,7 @@ border-radius: 4px;
      <x>0</x>
      <y>0</y>
      <width>1034</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -1249,6 +1389,12 @@ border-radius: 4px;
    <class>QWidgetAnimationStrip</class>
    <extends>QWidget</extends>
    <header>widgets/qwidgetanimationstrip.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>QWidgetExpandableScroller</class>
+   <extends>QWidget</extends>
+   <header>Widgets/qwidgetexpandablescroller.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
