--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,6 @@
     <x>0</x>
     <y>0</y>
     <width>1034</width>
-    <height>666</height>
     <height>682</height>
    </rect>
   </property>
@@ -1059,14 +1058,10 @@ border-radius: 4px;
           <widget class="QWidget" name="scrollAreaWidgetContents">
            <property name="geometry">
             <rect>
-             <x>-159</x>
-             <y>0</y>
-             <width>618</width>
-             <height>618</height>
              <x>0</x>
              <y>0</y>
-             <width>624</width>
-             <height>624</height>
+             <width>310</width>
+             <height>461</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout">
@@ -1166,8 +1161,6 @@ border-radius: 4px;
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>318</width>
-              <height>318</height>
               <width>324</width>
               <height>324</height>
              </rect>
@@ -1310,6 +1303,32 @@ border-radius: 4px;
             </property>
             <property name="text">
              <string>FPS: 1</string>
+            </property>
+           </widget>
+           <widget class="QPushButton" name="previewButton">
+            <property name="geometry">
+             <rect>
+              <x>110</x>
+              <y>20</y>
+              <width>96</width>
+              <height>27</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>PushButton</string>
+            </property>
+           </widget>
+           <widget class="QDoubleSpinBox" name="zoomSpinBox">
+            <property name="geometry">
+             <rect>
+              <x>210</x>
+              <y>20</y>
+              <width>68</width>
+              <height>24</height>
+             </rect>
+            </property>
+            <property name="singleStep">
+             <double>0.100000000000000</double>
             </property>
            </widget>
           </widget>
