--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1062,8 +1062,6 @@ border-radius: 4px;
              <y>0</y>
              <width>310</width>
              <height>461</height>
-             <width>624</width>
-             <height>624</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout">
@@ -1229,8 +1227,8 @@ border-radius: 4px;
            <widget class="QPushButton" name="addCanvasButton">
             <property name="geometry">
              <rect>
-              <x>16</x>
-              <y>20</y>
+              <x>10</x>
+              <y>100</y>
               <width>96</width>
               <height>27</height>
              </rect>
@@ -1310,7 +1308,7 @@ border-radius: 4px;
            <widget class="QPushButton" name="previewButton">
             <property name="geometry">
              <rect>
-              <x>110</x>
+              <x>10</x>
               <y>20</y>
               <width>96</width>
               <height>27</height>
@@ -1320,17 +1318,17 @@ border-radius: 4px;
              <string>Start Preview</string>
             </property>
            </widget>
-           <widget class="QDoubleSpinBox" name="zoomSpinBox">
+           <widget class="QPushButton" name="fullPreviewButton">
             <property name="geometry">
              <rect>
-              <x>210</x>
+              <x>110</x>
               <y>20</y>
-              <width>68</width>
-              <height>24</height>
+              <width>96</width>
+              <height>27</height>
              </rect>
             </property>
-            <property name="singleStep">
-             <double>0.100000000000000</double>
+            <property name="text">
+             <string>Full Preview</string>
             </property>
            </widget>
           </widget>
