--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1060,15 +1060,15 @@ border-radius: 4px;
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>310</width>
-             <height>461</height>
+             <width>321</width>
+             <height>464</height>
             </rect>
            </property>
            <layout class="QGridLayout" name="gridLayout">
             <item row="0" column="0">
              <widget class="QWidgetCanvas" name="Canvas" native="true">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
@@ -1161,8 +1161,8 @@ border-radius: 4px;
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>324</width>
-              <height>324</height>
+              <width>318</width>
+              <height>318</height>
              </rect>
             </property>
             <property name="sizePolicy">
@@ -1414,7 +1414,7 @@ border-radius: 4px;
      <x>0</x>
      <y>0</y>
      <width>1034</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
