--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1040,6 +1040,12 @@ border-radius: 4px;
        <layout class="QVBoxLayout" name="Middle_horzLayout">
         <item>
          <widget class="QScrollArea" name="scrollArea">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -1060,9 +1066,15 @@ border-radius: 4px;
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>321</width>
+             <width>28</width>
              <height>464</height>
             </rect>
+           </property>
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
            </property>
            <layout class="QGridLayout" name="gridLayout">
             <item row="0" column="0">
